# Undine

./: .gitignore  .rubocop.yml  Cargo.toml  README.md  Vagrantfile  devenv.nix  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
src/evasion/: debugger.rs
src/obfuscation/: metamorphism.rs  mod.rs
src/persistence/: copy.rs  mod.rs  registry.rs
src/process/: fiber.rs  mod.rs  pe.rs  pid.rs  shellcode.rs
