[package]
name = "undine"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = "s"
debug = false
strip = true
lto = true

[lib]
path = "src/obfuscation/metamorphism.rs"
proc-macro = true

[dependencies]
litcrypt2 = "0.1.3"
proc-macro2 = "1.0.95"
quote = "1.0.40"
rand = "0.9.1"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.5"

[dependencies.syn]
version = "2.0.104"
features = [
    "full"
]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60.2"
features = [
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
